welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: not found: value message
  message = litMessage()
  ^BDRBuggle:4: error: not found: value message
  if (message == 'R') {
      ^BDRBuggle:7: error: not found: value message
  if (message == 'L') {
      ^BDRBuggle:10: error: not found: value message
  if (message == 'I') {
      ^BDRBuggle:13: error: not found: value message
  if (message == 'A') {
      ^BDRBuggle:16: error: not found: value message
  if (message == 'B') {
      ^BDRBuggle:19: error: not found: value message
  if (message == 'C') {
      ^BDRBuggle:22: error: not found: value message
  if (message == 'Z') {
      ^BDRBuggle:25: error: not found: value message
  if (message == 'Y') {
      ^BDRBuggle:28: error: not found: value message
  if (message == 'X') {
      ^